tests/success/leap.ys
!yamlscript/v0

defn is-leap-year(year):
  and:
    zero?: year % 4
    or:
      pos?: year % 100
      zero?: year % 400
