tests/syntax-error/leap.ys
!yamlscript/v0

defn is-leap-year():
